fix player box "y" cut off

--- a/src/styles/ui/PlayerBox.scss
+++ b/src/styles/ui/PlayerBox.scss
@@ -19,6 +19,9 @@
   }
 
   &.username {
+    display: flex;
+    align-items: center;
+    height: 30px;
     overflow: hidden; // Prevents content from spilling out
     text-overflow: ellipsis; // Adds an ellipsis if the text overflows
     white-space: nowrap; // Keeps the text on a single line
